@@ -1,0 +1,15 @@
+BaseName: clang-analysis
+Version: 1.0
+Description: clang analysis
+CreationDate: Wed 12 Sep 16:00:26 CEST 2018
+Maintainer: Wouter Wijngaards
+Category:
+Component:
+Depends:
+Help:
+Pre:
+Post:
+Test: clang-analysis.test
+AuxFiles:
+Passed:
+Failure:
